--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,11 +41,34 @@ services:
     container_name: postgres-exporter
     environment:
       DATA_SOURCE_NAME: "postgresql://postgres:postgres@postgres:5432/testdb?sslmode=disable"
+      PG_EXPORTER_AUTO_DISCOVER_DATABASES: "true"
+      PG_EXPORTER_EXTEND_QUERY_PATH: "/etc/postgres_exporter/exporter-queries.yaml"
+    volumes:
+      - ./scripts/exporter-queries.yaml:/etc/postgres_exporter/exporter-queries.yaml:ro
     ports:
       - "9187:9187"
     depends_on:
       postgres:
         condition: service_healthy
+    networks:
+      - monitoring
+
+  # Node Exporter for machine metrics
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    restart: unless-stopped
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    ports:
+      - "9100:9100"
     networks:
       - monitoring
 
@@ -79,11 +102,38 @@ services:
       - "8000:8000"
     environment:
       OPENAI_API_KEY: "${OPENAI_API_KEY}"
+      OPENAI_MODEL: "${OPENAI_MODEL}"
       PROMETHEUS_URL: "http://prometheus:9090"
       POSTGRES_DSN: "postgresql://postgres:postgres@postgres:5432/testdb"
+    volumes:
+      - ./chatbot:/app
+      - ./scripts:/scripts:ro
+    command: [ "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload" ]
     depends_on:
       - prometheus
       - postgres
+    networks:
+      - monitoring
+    restart: unless-stopped
+
+  # Grafana for Visualization
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=false
+      - GF_USERS_DEFAULT_THEME=dark
+    volumes:
+      - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
+    depends_on:
+      - prometheus
     networks:
       - monitoring
     restart: unless-stopped
