chore: Update frontend dependencies by adding numerous new and updated module files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,6 +138,20 @@ services:
       - monitoring
     restart: unless-stopped
 
+  # Frontend Chat Interface
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: postgres-frontend
+    ports:
+      - "5173:80"
+    depends_on:
+      - chatbot
+    networks:
+      - monitoring
+    restart: unless-stopped
+
 volumes:
   postgres_data:
   prometheus_data:
